syntax = "proto3";

option go_package = "github.com/tobyrushton/globalfront/pb/game/v1";

package game.v1;

message Game {
    string id = 1;
    int32 player_count = 2;
    int32 max_players = 3;
}

message Player {
    string id = 1;
    string color = 2;
    int32 troop_count = 3;
}

message Tile {
    string player_id = 1;
}