syntax = "proto3";

package matchmaker.v1;

import "game/v1/game.proto";

option go_package = "github.com/tobyrushton/globalfront/pb/matchmaker/v1";

service Matchmaker {
    rpc GetCurrentGame(GetCurrentGameRequest) returns (GetCurrentGameResponse);
}

message GetCurrentGameRequest {}

message GetCurrentGameResponse {
    game.v1.Game game = 1;
}